fixed spacing issue

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -110,8 +110,9 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/background2.jpeg) no-repeat center center;
     background-size: cover;
+    text-align: center;
 }
 
 .banner h2 {
@@ -127,13 +128,12 @@ h6 {
 }
 
 .banner-social-buttons {
-    float: center;
-    margin-top: 0;
+    margin-top: 10px;
 }
 
 @media(max-width:1199px) {
     ul.banner-social-buttons {
-        float: center;
+        float: left;
         margin-top: 15px;
     }
 }
